envoy-extension-envoy-proxy/ext_proc.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-ext-proc
  labels:
    app: grpc-ext-proc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grpc-ext-proc
  template:
    metadata:
      labels:
        app: grpc-ext-proc
    spec:
      containers:
      - name: grpc-ext-proc
        image: us-docker.pkg.dev/kaushikmitra-gke-dev/kaushikmitra-docker-repo/envoy-gateway-grpc-vllm-lora-go:latest
        args:
        - -pods
        - "vllm-0,vllm-1,vllm-2"
        - -podIPs
        - "10.8.2.81:8000,10.8.0.77:8000,10.8.2.82:8000"  
        - -certPath
        - "/app/certs"
        ports:
        - containerPort: 8000
        volumeMounts:
            - name: grpc-ext-proc-secret
              mountPath: /app/certs
        readinessProbe:
              httpGet:
                path: /healthz
                port: 8080
      volumes:
        - name: grpc-ext-proc-secret
          secret:
            secretName: grpc-ext-proc-secret
            items:
              - key: tls.crt
                path: server.crt
              - key: tls.key
                path: server.key
---
apiVersion: v1
kind: Service
metadata:
  name: grpc-ext-proc
  namespace: default
spec:
  ports:
    - port: 9002
      targetPort: 9002
  selector:
    app: grpc-ext-proc
