envoy-extension-envoy-proxy/gateway.yaml

apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: genai-inference-gateway
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller

---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: genai-inference-gateway
spec:
  gatewayClassName: genai-inference-gateway
  listeners:
    - name: http
      protocol: HTTP
      port: 80
